--- a/final.html
+++ b/final.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avengers: Endgame Summary - Page 2</title>
-</head>
-<body>
+    <title>Final Part</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
+</head>
+    <!-- This page summarizes the final arc of the movie --> 
+<body>
     <h2>The Final Arc</h2>
     <hr>
     <p>With the Infinity Stones collected, the Avengers build a new gauntlet. <br> 
@@ -22,7 +25,7 @@
     <ul>
         <li>Wakandan warriors, sorcerers, and Asgardians join the fight.</li>
         <li>Spider-Man swings into action, reuniting with Iron Man.</li>
-        <li>Captain Marvel arrives, destroying Thano's ship in a powerful display.</li>
+        <li>Captain Marvel arrives, destroying Thanos' ship in a powerful display.</li>
     </ul>
 
     <p>In the climactic moment, Thanos gets his hands on the gauntlet, <br>
@@ -30,9 +33,14 @@
         Iron Man snaps his fingers, turning Thanos and his army to dust.</p>
     <p>The battle ends, but Iron Man dies from his injuries, <br> 
         leaving the Avengers mourning their friend. The universe is saved, but at the cost of those they loved.</p>
-<img src="Iron Man Pic.jpg" alt="Iron Man's sacrifice">
-<h2>The End Of Endgame</h2>
-<a href="intro.html">Going Back To Intro</a> <br>
-<a href="index.html">Back To Index</a>
+        <div class="image-container">
+        <img src="Iron Man sacrifice.jpg" alt="Iron Man's sacrifice" width="600">
+        </div>
+    <h2>The End Of Endgame</h2>
+    <div class="link">
+    <a href="intro.html">Going Back To Intro</a> <br>
+    <a href="index.html">Back To Index</a>
+    </div>
+
 </body>
 </html>
