--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Summary</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
+       <!-- This page introduces the website and links to the intro -->
 <body>
     <h1>This Web Is For Movie's Summary</h1>
     <hr>
     <h2>Enjoy Reading</h2>
     <hr>
-    <hr>
-        <a href="intro.html">To The Intro</a>
+    <div class="link">
+    <a href="intro.html">To The Intro</a>
+    </div>
     <hr>
     <h2>Never Skip A page!!!!!!</h2>
-
 
 </body>
 </html>
