--- a/intro.html
+++ b/intro.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avengers: Endgame Summary</title>
+    <title>Movie Intro</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
+        <!-- This page provides a summary of the movie's intro and mid story -->
 <body>
     <h1>Avengers: Endgame Summary</h1>
-<img src="Avengers End Game.jpg" alt="Pic of Avengers:Endgame">
+    <div class="image-container">
+    <img src="Avengers End Game.jpg" alt="Pic of Avengers: Endgame">
+    </div>
     <h2>Introduction</h2>
     <p>After the devastating events of "Infinity War," the world is in chaos. <br>
         Half of all life has been wiped out, and the Avengers are left broken. <br>
@@ -25,7 +30,9 @@
         <li>Black Widow and Hawkeye go to Vormir.</li>
     </ul>
     <p>The journey is filled with challenges, and sacrifices are made along the way.</p>
-<a href="final.html">To The Final</a> <br>
-<a href="index.html">Go Back To Index</a>
+    <div class="link">
+    <a href="final.html">To The Final</a> <br>
+    <a href="index.html">Go Back To Index</a>
+
 </body>
 </html>
