--- a/final.html
+++ b/final.html
@@ -6,11 +6,19 @@
     <title>Final Part</title>
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
+    <style>
+        .death:hover{
+            content: url(irondeath.jpg);
+        }
+        .assemble:hover {
+            content: url(gifFight.gif)
+        }
+    </style>
 </head>
     <!-- This page summarizes the final arc of the movie --> 
 <body>
-    <h2>The Final Arc</h2>
+  <div class="body">
+    <h2 draggable="true">The Final Arc</h2>
     <hr>
     <p>With the Infinity Stones collected, the Avengers build a new gauntlet. <br> 
         Hulk uses it to reverse Thanos' snap, bringing back everyone who was lost. <br>
@@ -22,6 +30,11 @@
     </ol>
 
     <p>Just as hope seems lost, Doctor Strange and other heroes return through portals, bringing allies from across the universe to stand against Thanos.</p>
+    
+    <div class="image-container">
+        <img class="assemble" src="avengers-avengers-assemble.gif" alt="Pic of Avengers: Endgame" width="500" height="300">
+        </div> 
+    
     <ul>
         <li>Wakandan warriors, sorcerers, and Asgardians join the fight.</li>
         <li>Spider-Man swings into action, reuniting with Iron Man.</li>
@@ -34,13 +47,13 @@
     <p>The battle ends, but Iron Man dies from his injuries, <br> 
         leaving the Avengers mourning their friend. The universe is saved, but at the cost of those they loved.</p>
         <div class="image-container">
-        <img src="Iron Man sacrifice.jpg" alt="Iron Man's sacrifice" width="600">
+        <img class="death" src="Iron Man sacrifice.jpg" alt="Iron Man's sacrifice" height="500" width="530">
         </div>
-    <h2>The End Of Endgame</h2>
+    <h2 draggable="true">The End Of Endgame</h2>
     <div class="link">
     <a href="intro.html">Going Back To Intro</a> <br>
     <a href="index.html">Back To Index</a>
     </div>
-
+  </div> 
 </body>
 </html>
