--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 </head>
        <!-- This page introduces the website and links to the intro -->
 <body>
+   <div class="body">
     <h1>This Web Is For Movie's Summary</h1>
-    <hr>
+    
     <h2>Enjoy Reading</h2>
+    <hr>   
+    <div class="image-container">
+    <img class="img1" src="Avengers End Game.jpg" alt="EndGame Pic">
+    </div>
+    <h2>Never Skip A page!!!!!!</h2>
     <hr>
     <div class="link">
-    <a href="intro.html">To The Intro</a>
+        <a href="intro.html">To The Intro</a>
+        </div>
     </div>
-    <hr>
-    <h2>Never Skip A page!!!!!!</h2>
-
 </body>
 </html>
