--- a/intro.html
+++ b/intro.html
@@ -9,20 +9,20 @@
 </head>
         <!-- This page provides a summary of the movie's intro and mid story -->
 <body>
+   <div class="body">
     <h1>Avengers: Endgame Summary</h1>
-    <div class="image-container">
-    <img src="Avengers End Game.jpg" alt="Pic of Avengers: Endgame">
-    </div>
+    <hr>
     <h2>Introduction</h2>
     <p>After the devastating events of "Infinity War," the world is in chaos. <br>
         Half of all life has been wiped out, and the Avengers are left broken. <br>
         They plan to undo Thanos' actions and restore peace.</p>
 
-    <hr>
-
     <h2>Mid Story</h2>
     <p>The Avengers devise a risky plan: time travel. <br>
         They split into teams and revisit past moments in their history to collect the Infinity Stones before Thanos can get them.</p>
+        <div class="image-container">
+        <img src="travel.jpg" alt="TimeTravel" width="550" >
+        </div>
     <ul>
         <li>Iron Man, Captain America, Hulk, and Ant-Man go back to the Battle of New York.</li>
         <li>Thor and Rocket visit Asgard.</li>
@@ -33,6 +33,6 @@
     <div class="link">
     <a href="final.html">To The Final</a> <br>
     <a href="index.html">Go Back To Index</a>
-
+    </div>
 </body>
 </html>
