--- a/final.html
+++ b/final.html
@@ -7,15 +7,14 @@
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
-        .death:hover{
+        .death:hover {
             content: url(irondeath.jpg);
         }
         .assemble:hover {
-            content: url(gifFight.gif)
+            content: url(gifFight.gif);
         }
     </style>
 </head>
-    <!-- This page summarizes the final arc of the movie --> 
 <body>
   <div class="body">
     <h2 draggable="true">The Final Arc</h2>
@@ -28,12 +27,12 @@
         <li>Captain America lifts Mjolnir, proving himself worthy, and briefly gains the upper hand.</li>
         <li>Thanos overwhelms them and calls in his massive army, outnumbering the Avengers.</li>
     </ol>
-
-    <p>Just as hope seems lost, Doctor Strange and other heroes return through portals, bringing allies from across the universe to stand against Thanos.</p>
+    <p>Just as hope seems lost, Doctor Strange and other heroes return through portals,
+        <br>bringing allies from across the universe to stand against Thanos.</p>
     
     <div class="image-container">
         <img class="assemble" src="avengers-avengers-assemble.gif" alt="Pic of Avengers: Endgame" width="500" height="300">
-        </div> 
+    </div> 
     
     <ul>
         <li>Wakandan warriors, sorcerers, and Asgardians join the fight.</li>
@@ -45,14 +44,30 @@
         but Iron Man manages to take the Stones. In a heroic sacrifice, <br>
         Iron Man snaps his fingers, turning Thanos and his army to dust.</p>
     <p>The battle ends, but Iron Man dies from his injuries, <br> 
-        leaving the Avengers mourning their friend. The universe is saved, but at the cost of those they loved.</p>
-        <div class="image-container">
+       leaving the Avengers mourning their friend. The universe is saved, but at the cost of those they loved.</p>
+    <div class="image-container">
         <img class="death" src="Iron Man sacrifice.jpg" alt="Iron Man's sacrifice" height="500" width="530">
-        </div>
+    </div>
+    <h2>Aftermath and Reflection</h2>
+    <p>After the battle, the Avengers deal with the loss of Iron Man and the toll the fight took on them.
+    <br> This moment emphasizes the heavy price of heroism.</p>
+    <p>"I love you 3000." ~ Tony Stark</p>
+    <p>His legacy inspires the remaining heroes to continue fighting for what is right.</p>
+    <div class="image-container">
+        <img class="img1" src="stark.jpg" alt="Tony" width="350" height="350">
+    </div>
+    <h2>Quotes from Avengers: Endgame</h2>
+    <ul>
+    <li>"Part of the journey is the end." ~ Tony Stark</li>
+    <li>"Whatever it takes." ~ Avengers Assemble</li>
+    </ul>
     <h2 draggable="true">The End Of Endgame</h2>
     <div class="link">
-    <a href="intro.html">Going Back To Intro</a> <br>
-    <a href="index.html">Back To Index</a>
+        <button onclick="location.href='intro.html'">Back To Intro</button>
+        <br>
+        <button onclick="location.href='index.html'">Back To Index</button>
+        <br>
+        <button onclick="location.href='maincast.html'">Main Cast</button>
     </div>
   </div> 
 </body>
