--- a/intro.html
+++ b/intro.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-        <!-- This page provides a summary of the movie's intro and mid story -->
 <body>
    <div class="body">
     <h1>Avengers: Endgame Summary</h1>
@@ -16,12 +15,20 @@
     <p>After the devastating events of "Infinity War," the world is in chaos. <br>
         Half of all life has been wiped out, and the Avengers are left broken. <br>
         They plan to undo Thanos' actions and restore peace.</p>
+    <h2 draggable="true">Main Characters</h2>
+    <p>The film features an ensemble cast, each with unique arcs that contribute to the overall story:</p>
+    <ul>
+    <li>Iron Man (Tony Stark): His journey from self-centered billionaire to selfless hero.</li>
+    <li>Captain America (Steve Rogers): A symbol of hope and perseverance.</li>
+    <li>Black Widow (Natasha Romanoff): Her sacrifices and strong leadership.</li>
+    <li>Thor: His growth and acceptance of loss.</li>
+    </ul>
 
-    <h2>Mid Story</h2>
+    <h2 draggable="true">Mid Story</h2>
     <p>The Avengers devise a risky plan: time travel. <br>
         They split into teams and revisit past moments in their history to collect the Infinity Stones before Thanos can get them.</p>
         <div class="image-container">
-        <img src="travel.jpg" alt="TimeTravel" width="550" >
+        <img src="travel.jpg" alt="TimeTravel" width="550">
         </div>
     <ul>
         <li>Iron Man, Captain America, Hulk, and Ant-Man go back to the Battle of New York.</li>
@@ -29,10 +36,16 @@
         <li>Nebula and War Machine travel to Morag.</li>
         <li>Black Widow and Hawkeye go to Vormir.</li>
     </ul>
+    <h2 draggable="true">Key Themes</h2>
+    <ul>
+    <li>The consequences of failure and loss.</li>
+    <li>The importance of teamwork and sacrifice.</li>
+    <li>The struggle against fate and the fight for redemption.</li>
+    </ul>
     <p>The journey is filled with challenges, and sacrifices are made along the way.</p>
     <div class="link">
-    <a href="final.html">To The Final</a> <br>
-    <a href="index.html">Go Back To Index</a>
+        <button onclick="location.href='final.html'">To The Final</button><br>
+        <button onclick="location.href='index.html'">Back To Index</button>
     </div>
 </body>
 </html>
