--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-       <!-- This page introduces the website and links to the intro -->
 <body>
-   <div class="body">
+   <div class="body"> 
     <h1>This Web Is For Movie's Summary</h1>
-    
-    <h2>Enjoy Reading</h2>
-    <hr>   
+    <h2>Welcome to My Movie Summary</h2>
+    <p>In this web, you'll find detailed summaries of popular movies,
+    <br> with a focus on plot, characters, and key moments.</p>
+    <h3>But for now we will talk about The Avengers Endgame!</h3>
+    <h2>Enjoy Reading!</h2> 
     <div class="image-container">
     <img class="img1" src="Avengers End Game.jpg" alt="EndGame Pic">
     </div>
     <h2>Never Skip A page!!!!!!</h2>
-    <hr>
     <div class="link">
-        <a href="intro.html">To The Intro</a>
-        </div>
+        <button onclick="location.href='about.html'">About Me</button>
+        <br>       
+        <button onclick="location.href='intro.html'">To The Intro</button>
+    </div>
     </div>
 </body>
 </html>
