--- a/maincast.html
+++ b/maincast.html
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="link">
-            <button onclick="location.href='final.html'">To The Final</button><br>
+            <button onclick="location.href='final.html'">Back to Final</button><br>
         </div>
     </div>
 </body>
