--- a/maincast.html
+++ b/maincast.html
@@ -12,7 +12,7 @@
         <h1>Main Cast of Avengers</h1>
         <div class="cast-container">
             <div class="cast-member">
-                <img src="tonyy.jpg" alt="Iron Man">
+                <img src="iron.jpg" alt="Iron Man">
                 <h2>Iron Man</h2>
                 <p>Tony Stark is a billionaire genius who becomes the armored hero known as Iron Man.</p>
             </div>
@@ -52,12 +52,12 @@
                 <p>A genetically modified raccoon, Rocket is a master tactician and weapons expert.</p>
             </div>
             <div class="cast-member">
-                <img src="capt.jpg" alt="Captain America">
+                <img src="amer.jpg" alt="Captain America">
                 <h2>Captain America</h2>
                 <p>Steve Rogers, the first Avenger, fights for justice with his indestructible shield.</p>
             </div>
             <div class="cast-member">
-                <img src="ant.jpg" alt="Ant Man">
+                <img src="man.jpg" alt="Ant Man">
                 <h2>Ant Man</h2>
                 <p>Scott Lang can shrink in size while increasing in strength as Ant-Man.</p>
             </div>
@@ -67,7 +67,7 @@
                 <p>A skilled warrior and adopted daughter of Thanos, Nebula seeks redemption and justice.</p>
             </div>
             <div class="cast-member">
-                <img src="machine.jpg" alt="War Machine">
+                <img src="negg.jpg" alt="War Machine">
                 <h2>War Machine</h2>
                 <p>James Rhodes dons the War Machine armor to support the Avengers in battle.</p>
             </div>
