--- a/about.html
+++ b/about.html
@@ -5,80 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <style> /*Special Style for this page*/
-.about-container {
-    width: 60%;
-    margin: 50px auto;
-    padding: 20px;
-    border: 2px solid gold;
-    background-color: #1c1c1c;
-    color: #ECDFCC;
-    text-align: center;
-    border-radius: 10px;
-}
-
-.about-content {
-    font-size: 18px;
-    line-height: 1.8;
-    color: gold;
-}
-
-.button-container {
-    margin-top: 20px;
-}
-
-button {
-    background-color: gold;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: black;
-}
-img {
-    width: 300px;
-    height: 300px;
-    border-radius: 100px;
-    margin-bottom: 15px;
-}
-    </style>
+    <link rel="stylesheet" href="2style.css">
 </head>
 <body>
     <div class="about-container">
         <h1>About Me</h1>
-        <hr>
-        <img src="nawng.jpg" alt="face AHHH" height="300">
+        <img src="nawng.jpg" alt="Profile Picture">
+
         <div class="about-content">
-            <h3>Name: Dregg Raul C. Cabansay</h3>
-            <h3>Age: 18 years old</h3>
-            <h3>Location: Deca Homes, Tunghaan, Minglanilla</h3>
-            <p>
-                I am a dedicated and motivated individual who is passionate about technology, creativity, and learning. 
-                <br>My interests span a wide range of activities that help me grow both personally and intellectually.
-            </p>
-            <h2>Hobbies:</h2>
-            <ul>
-                <li>Watching anime (One Piece, Bleach, Seven Deadly Sins)  I love exploring complex characters and epic storylines. Anime is not just entertainment for me; it’s a source of inspiration and life lessons.</li>
-                <li>Listening to music (hip-hop, country, rap)  Music fuels my creativity and helps me stay focused. Whether I’m working or relaxing, there’s always a perfect track to accompany the moment.</li>
-                <li>Playing online games  Gaming allows me to strategize, think critically, and connect with friends. It's also a great way to unwind after a tiring day.</li>
-            </ul>
-            <p>
-                I am always looking for ways to improve myself, whether it’s through learning new skills, exploring different cultures, or challenging myself to step out of my comfort zone. 
-                <br>In every challenge, I believe there is an opportunity for growth, and I strive to approach each one with determination and optimism.
-            </p>
-            <div>
-            <h3>
-                One of my core beliefs is captured in my favorite saying: "As long as I live, there are infinite chances." This quote by Monkey D. Luffy from One Piece resonates with me deeply, as it reflects my outlook on life. No matter the obstacles, I believe in the endless possibilities to achieve my goals and dreams.
-            </h3>
+            <div class="section">
+                <h2 class="section-title">Personal Information</h2>
+                <p><strong>Name:</strong> Dregg Raul C. Cabansay</p>
+                <p><strong>Age:</strong> 18 years old</p>
+                <p><strong>Location:</strong> Deca Homes, Tunghaan, Minglanilla</p>
             </div>
-            <p>
-                In the future, I hope to apply my passion for technology and creativity to make a meaningful impact in the field I choose. I am always excited to collaborate with others, share ideas, and create something impactful.
-            </p>
+
+            <div class="section">
+                <h2 class="section-title">Profile Summary</h2>
+                <p>
+                    I am a dedicated and motivated individual with a passion for technology, creativity, and learning.
+                    I am constantly seeking to expand my knowledge and skills to grow personally and intellectually.
+                </p>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">Hobbies</h2>
+                <ul>
+                    <li><strong>Watching anime</strong> - I enjoy exploring complex characters and epic storylines that inspire me.</li>
+                    <li><strong>Listening to music</strong> - Music fuels my creativity and keeps me focused.</li>
+                    <li><strong>Playing online games</strong> - Gaming is my way to unwind and sharpen my critical thinking skills.</li>
+                </ul>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">Philosophy</h2>
+                <p>
+                    "As long as I live, there are infinite chances." ~Monkey D. Luffy. This quote reflects my belief in endless possibilities and motivates me to overcome obstacles and achieve my goals.
+                </p>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">Future Aspirations</h2>
+                <p>
+                    In the future, I hope to leverage my passion for technology and creativity to make a positive impact. I look forward to collaborating with others to bring ideas to life and create something meaningful. I'm still not an expert web developer for now so you may find flaws on my web but i am always enhancing my skills and hoping to be better at this so just enjoy exploring and reading.
+                </p>
+            </div>
         </div>
+
         <div class="button-container">
             <button onclick="window.location.href='index.html';">Back to Index</button>
         </div>
