--- a/final.html
+++ b/final.html
@@ -59,7 +59,7 @@
         <br>
         <button onclick="location.href='intro.html'">Back To Intro</button>
         <br>
-        <button onclick="location.href='index.html'">Back To Index</button>
+        <button onclick="location.href='index.html'">Back To Main Page</button>
     </div>
   </div> 
 </body>
