--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="button-container">
-            <button onclick="window.location.href='index.html';">Back to Index</button>
+            <button onclick="window.location.href='index.html'">Back to Main Page</button>
         </div>
     </div>
 </body>
