--- a/intro.html
+++ b/intro.html
@@ -45,7 +45,7 @@
     <p>The journey is filled with challenges, and sacrifices are made along the way.</p>
     <div class="link">
         <button onclick="location.href='final.html'">To The Final</button><br>
-        <button onclick="location.href='index.html'">Back To Index</button>
+        <button onclick="location.href='index.html'">Back To Main Page</button>
     </div>
 </body>
 </html>
