--- a/maincast.html
+++ b/maincast.html
@@ -12,64 +12,64 @@
         <h1>Main Cast of Avengers</h1>
         <div class="cast-container">
             <div class="cast-member">
-                <img src="iron.jpg" alt="Iron Man">
+                <img src="iron (1).jpg" alt="Iron Man">
                 <h2>Iron Man</h2>
-                <p>Tony Stark is a billionaire genius who becomes the armored hero known as Iron Man.</p>
+                <p>Tony Stark, the genius who started it all, faces the ultimate test of his legacy, sacrificing everything to save the universe.</p>
             </div>
             <div class="cast-member">
-                <img src="spideyy.jpg" alt="Spider Man">
+                <img src="spideyy (1).jpg" alt="Spider Man">
                 <h2>Spider Man</h2>
-                <p>Peter Parker gains spider-like abilities and fights crime as the friendly neighborhood Spider-Man.</p>
+                <p>Peter Parker returns from the snap, eager to help his mentor and fellow heroes in the final battle, driven by hope and the desire to make a difference in saving the universe.</p>
             </div>
             <div class="cast-member">
                 <img src="blacky.jpg" alt="Black Widow">
                 <h2>Black Widow</h2>
-                <p>Natasha Romanoff is a former spy and assassin, now a vital member of the Avengers.</p>
+                <p>Natasha Romanoff’s journey comes full circle as she makes the greatest sacrifice, proving her loyalty and love for her found family.</p>
             </div>
             <div class="cast-member">
-                <img src="hawk.jpg" alt="Hawkeye">
+                <img src="hawk (1).jpg" alt="Hawkeye">
                 <h2>Hawkeye</h2>
-                <p>Clint Barton, master archer and expert marksman, fights alongside the Avengers.</p>
+                <p>Clint Barton, now a broken man, is driven by vengeance and redemption, fighting to bring back what he lost after the snap.</p>
             </div>
             <div class="cast-member">
-                <img src="thor.jpg" alt="Thor">
+                <img src="thor (1).jpg" alt="Thor">
                 <h2>Thor</h2>
-                <p>The God of Thunder, wielding the mighty Mjölnir, Thor is a key Avenger from Asgard.</p>
+                <p>The God of Thunder struggles with guilt and failure, rediscovering his worth as he fights alongside his friends to save the universe.</p>
             </div>
             <div class="cast-member">
-                <img src="hulk.jpg" alt="Hulk">
+                <img src="hulk (1).jpg" alt="Hulk">
                 <h2>Hulk</h2>
-                <p>Dr. Bruce Banner transforms into the Hulk, a powerful creature with unmatched strength.</p>
+                <p>Bruce Banner finally balances brains and brawn, becoming a hero who unites science and strength to reverse the devastation of the snap.</p>
             </div>
             <div class="cast-member">
-                <img src="strange.jpg" alt="Doctor Strange">
+                <img src="strange (1).jpg" alt="Doctor Strange">
                 <h2>Doctor Strange</h2>
-                <p>Stephen Strange is a former neurosurgeon who becomes the Sorcerer Supreme.</p>
+                <p>Stephen Strange holds the key to a single chance of victory, guiding the heroes from beyond the snap’s reach.</p>
             </div>
             <div class="cast-member">
-                <img src="racoon.jpg" alt="Rocket">
+                <img src="racoon (1).jpg" alt="Rocket">
                 <h2>Rocket</h2>
-                <p>A genetically modified raccoon, Rocket is a master tactician and weapons expert.</p>
+                <p>Rocket, the survivor of his fractured family, rises as a leader, using wit and firepower to defend the universe alongside his new team.</p>
             </div>
             <div class="cast-member">
-                <img src="amer.jpg" alt="Captain America">
+                <img src="amer (1).jpg" alt="Captain America">
                 <h2>Captain America</h2>
-                <p>Steve Rogers, the first Avenger, fights for justice with his indestructible shield.</p>
+                <p>Steve Rogers, the unwavering leader, faces his destiny with courage and honor, choosing to finally live the life he fought so hard to protect.</p>
             </div>
             <div class="cast-member">
-                <img src="man.jpg" alt="Ant Man">
+                <img src="man (1).jpg" alt="Ant Man">
                 <h2>Ant Man</h2>
-                <p>Scott Lang can shrink in size while increasing in strength as Ant-Man.</p>
+                <p>Scott Lang, the unlikely hero, plays a pivotal role in time-travel adventures, proving that even the smallest hero can make a huge difference.</p>
             </div>
             <div class="cast-member">
-                <img src="nebu.jpg" alt="Nebula">
+                <img src="nebu (1).jpg" alt="Nebula">
                 <h2>Nebula</h2>
-                <p>A skilled warrior and adopted daughter of Thanos, Nebula seeks redemption and justice.</p>
+                <p>Nebula battles her past and chooses her own path, defying her former self to become a savior in the fight against her father, Thanos.</p>
             </div>
             <div class="cast-member">
-                <img src="negg.jpg" alt="War Machine">
+                <img src="negg (1).jpg" alt="War Machine">
                 <h2>War Machine</h2>
-                <p>James Rhodes dons the War Machine armor to support the Avengers in battle.</p>
+                <p>James Rhodes stands strong in his armored suit, defending his allies and proving that every hero matters in the battle for the universe.</p>
             </div>
         </div>
         <div class="link">
